--- a/rest-with-spring-boot-and-java/src/main/resources/application.properties
+++ b/rest-with-spring-boot-and-java/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=rest-with-spring-boot-and-java
+spring.datasource.url=jdbc:mysql://localhost:3306/rest_Spring_boot?rootTimezone=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
